--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my_profile.png" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/my_profile.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -82,7 +82,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/profile_bg.jpg" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/profile_bg.png" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Apurva Khairnar</h2>
