--- a/index.html
+++ b/index.html
@@ -521,21 +521,21 @@
 
     
 
-  <!-- Contact Section -->
+<!-- Contact Section -->
 <section id="contact" class="section" style="padding-bottom: 120px; padding-top: 60px;">
   
   <!-- Section Title -->
-  <div class="container section-title" data-aos="fade-up">
+  <div class="container section-title">
     <h2>Let’s Work Together</h2>
   </div>
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-6">
         <div class="info-wrap">
 
           <!-- Location -->
-          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
+          <div class="info-item d-flex">
             <i class="bi bi-geo-alt flex-shrink-0"></i>
             <div>
               <h3>Location</h3>
@@ -544,7 +544,7 @@
           </div>
 
           <!-- Phone -->
-          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+          <div class="info-item d-flex">
             <i class="bi bi-telephone flex-shrink-0"></i>
             <div>
               <h3>Phone</h3>
@@ -553,7 +553,7 @@
           </div>
 
           <!-- Email -->
-          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+          <div class="info-item d-flex">
             <i class="bi bi-envelope flex-shrink-0"></i>
             <div>
               <h3>Email</h3>
@@ -566,6 +566,7 @@
     </div>
   </div>
 </section>
+
 
 
 
