--- a/index.html
+++ b/index.html
@@ -520,8 +520,7 @@
    
 
     
-
-<!-- Contact Section -->
+  <!-- Contact Section -->
 <section id="contact" class="section" style="padding-bottom: 120px; padding-top: 60px;">
   
   <!-- Section Title -->
@@ -529,13 +528,13 @@
     <h2>Let’s Work Together</h2>
   </div>
 
-  <div class="container" data-aos="fade-up">
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
     <div class="row justify-content-center">
       <div class="col-lg-6">
         <div class="info-wrap">
 
           <!-- Location -->
-          <div class="info-item d-flex" data-aos="fade-up">
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <i class="bi bi-geo-alt flex-shrink-0"></i>
             <div>
               <h3>Location</h3>
@@ -544,7 +543,7 @@
           </div>
 
           <!-- Phone -->
-          <div class="info-item d-flex" data-aos="fade-up">
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <i class="bi bi-telephone flex-shrink-0"></i>
             <div>
               <h3>Phone</h3>
@@ -553,7 +552,7 @@
           </div>
 
           <!-- Email -->
-          <div class="info-item d-flex" data-aos="fade-up">
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <i class="bi bi-envelope flex-shrink-0"></i>
             <div>
               <h3>Email</h3>
